health-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-service
spec:
  selector:
    app: health
  ports:
    - name: health-service-port
      protocol: TCP
      port: 8000
  type: NodePort
